Code refactor and README.md added